[package]
name = "spanr"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["macros", "span", "debug"]
categories = ["development-tools::procedural-macro-helpers"]
description = "A tool for proc-macro authors to visualize the spans on generated code."

[package.metadata.docs.rs]
rustc-args = ["--cfg", "procmacro2_semver_exempt"]
rustdoc-args = ["--cfg", "procmacro2_semver_exempt"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
proc-macro2 = { version = "1.0.19", features = ["span-locations"] }
html-escape = "0.2.6"
